<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/outer_layout_padding"
    android:layout_marginTop="5dp">

    <include layout="@layout/header_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_settings"
        android:textSize="@dimen/medium_text_size"
        android:id="@+id/settingsTextView"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_text_size"
        android:text="@string/settings_board_size"
        android:id="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settingsTextView" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/boardSizeRadioGroup"
        android:layout_below="@id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_text_size"
        android:text="@string/settings_num_colors"
        android:id="@+id/textView2"
        android:layout_below="@+id/boardSizeRadioGroup"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/numColorsRadioGroup"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_color_blind"
        android:textSize="@dimen/small_text_size"
        android:id="@+id/colorBlindCheckBox"
        android:layout_below="@+id/numColorsRadioGroup"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_old_colors"
        android:textSize="@dimen/small_text_size"
        android:id="@+id/oldColorsCheckBox"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/colorBlindCheckBox" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/oldColorsCheckBox"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="3dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_apply_button"
        android:textSize="@dimen/small_text_size"
        android:layout_marginTop="1dp"
        android:layout_marginStart="30dp"
        android:id="@+id/applyButton"
        android:layout_below="@+id/separator"
        android:layout_alignParentStart="true" />

    <View
        android:layout_width="1dp"
        android:layout_height="46dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@+id/separator"
        android:layout_toStartOf="@+id/clearHighScoresButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_clear_high_scores_button"
        android:textSize="@dimen/small_text_size"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/clearHighScoresButton"
        android:layout_below="@+id/separator"
        android:layout_alignParentEnd="true" />

</RelativeLayout>