...
        android:textSize="@dimen/large_text_size"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/floodView"/>

    <com.github.megatronking.svg.support.extend.SVGImageView
        android:id="@+id/newGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:background="@null"
...
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="1sp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/floodView"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
...
