...
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <com.github.megatronking.svg.support.extend.SVGImageView
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/infoButton" />
...
