...
    <string name="seed_dialog_cancel">Cancel</string>

    <!--Settings Activity-->
    <string name="settings_settings">Settings</string>
    <string name="settings_num_colors">Number of Colors</string>
    <string name="settings_board_size">Board Size</string>
    <string name="settings_apply_button">Apply</string>
    <string name="settings_color_blind">Color Blind Mode</string>
    <string name="settings_old_colors">Old Color Scheme</string>
    <string name="settings_clear_high_scores_button">Clear Highscores</string>
    <string name="settings_clear_high_scores_dialog_title">Clear Highscores?</string>
    <string name="settings_clear_high_scores_dialog_text">All high score information will be cleared.</string>
    <string name="settings_clear_high_scores_dialog_confirm">Yes</string>
...
